--- a/frontend/src/components/Audio.css
+++ b/frontend/src/components/Audio.css
@@ -6,11 +6,13 @@
 .inner
 {
     display: inline-block;
+	font-size: 30px;
 }
 
 button {
-	padding:5px 15px; 
+	padding:10px 15px; 
     margin-left: 50px;
+	font-size: 20px;
 	background:#3e47ae; 
 	border:0 none;
 	cursor:pointer;
